<resources>
    <string name="app_name">NutriGo</string>
    <string name="title_activity_main">NutriGo</string>
    <string name="tab_text_1">Day</string>
    <string name="tab_text_2">Food</string>
    <string name="tab_text_3">Meal</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="swipe_left">edit</string>
    <string name="swipe_right">delete</string>

    <string name="fat">fat</string>
    <string name="carbs">carbs</string>
    <string name="sugar">sugar</string>
    <string name="protein">protein</string>
    <string name="name">Name</string>
    <string name="kcal">kcal</string>
    <string name="kcal_unit">%1.1f kcal</string>
    <string name="kcal_long">Energy (kcal)</string>
    <string name="zero">0</string>
    <string name="weight_unit">%1.0fg</string>
    <string name="weight_long">Weight (g)</string>
    <string name="portion_long">Portion (g)</string>

    <string name="add_food">Add Food</string>
    <string name="add_food_dialog">Add food?</string>
    <string name="add_food_dialog_pos">yes</string>
    <string name="add_food_dialog_neg">no</string>
    <string name="add_food_insert">%s was added</string>
    <string name="add_food_insert_error">Error occured while adding!</string>
    <string name="edit_food_insert_error">Error occured while updating!</string>
    <string name="weight_hint">All values should be based on the weight</string>

    <string name="add_meal">Add Meal</string>
    <string name="add_meal_dialog">Add Meal?</string>
    <string name="add_meal_dialog_pos">yes</string>
    <string name="add_meal_dialog_neg">no</string>
    <string name="add_meal_insert">Meal %1$s was added</string>
    <string name="add_meal_insert_error">Error occured while adding!</string>

    <string name="action_add">Add</string>
    <string name="action_search">Search</string>
    <string name="suggest">Search Foods</string>
    <string name="select_day">Select Day</string>
    <string name="show_profile_settings">Show profile settings</string>
    <string name="date_default">01.01.2019</string>

    <string name="undo">UNDO</string>
    <string name="undo_food_deleted">%1$s deleted!</string>
    <string name="undo_food_cloned">%1$s cloned to today!</string>
    <string name="undo_food_added_day">%1$s added to selected day!</string>
    <string name="undo_serving_changed">%1$s serving changed!</string>
    <string name="add_meal_missing">Please add Name and Foods!</string>
    <string name="food_image_desc">Food Image</string>

    <string name="tee_weight">Weight (kg)</string>
    <string name="tee_height">Height (cm)</string>
    <string name="tee_age">Age</string>
    <string name="tee_calc">Calc</string>
    <string name="macroCheck">Kcal should be %s!</string>
    <string name="tags">Tags</string>
    <string name="show_chart">Show Chart</string>
    <string name="last_x_days">Last x days</string>
    <string name="days">Days</string>
    <string name="_14">14</string>
</resources>
