<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusForward="@id/ti_tag"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/weight_long"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusForward="@id/ti_portion"
                android:selectAllOnFocus="true"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_portion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/portion_long"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusForward="@id/ti_kcal"
                android:selectAllOnFocus="true"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout5"
            app:layout_constraintTop_toBottomOf="@+id/hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_kcal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/kcal_long"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusForward="@id/ti_fat"
                android:selectAllOnFocus="true"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_fat_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fat"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_carbs_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/carbs"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_sugar_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sugar"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_protein_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/protein"
            android:textAllCaps="true"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_head">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_fat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/ti_carbs"
            android:selectAllOnFocus="true"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_carbs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/ti_sugar"
            android:selectAllOnFocus="true"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_sugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/ti_protein"
            android:selectAllOnFocus="true"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_protein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight_hint"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>