<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_kcal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/kcal_long"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusForward="@id/ti_fat"
            android:selectAllOnFocus="true"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <TextView
            android:id="@+id/tv_fat_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fat"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_carbs_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/carbs"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_sugar_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sugar"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_protein_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/protein"
            android:textAllCaps="true"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_head">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_fat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/ti_carbs"
            android:selectAllOnFocus="true"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_carbs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/ti_sugar"
            android:selectAllOnFocus="true"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_sugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/ti_protein"
            android:selectAllOnFocus="true"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_protein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/zero"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>