<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".view.fragments.FragmentList">

    <ImageButton
        android:id="@+id/foods_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/transparent"
        android:cropToPadding="false"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_expand_more" />

    <ImageView
        android:id="@+id/ic_nutri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_food"
        app:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ic_nutri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_nutri"
        app:layout_constraintTop_toTopOf="@+id/ic_nutri" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:dividerPadding="0dp"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

        <TextView
            android:id="@+id/tv_portion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/zero"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fat_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/fat"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_carbs_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/carbs"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_protein_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/protein"
            android:textAllCaps="true"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_kcal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/kcal" />

        <TextView
            android:id="@+id/tv_fat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/zero"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tv_carbs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right|center_horizontal"
            android:includeFontPadding="false"
            android:paddingEnd="2dp"
            android:text="@string/zero"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tv_sugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal|left"
            android:includeFontPadding="false"
            android:paddingStart="2dp"
            android:text="@string/zero"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_protein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/zero"
            android:textAllCaps="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
